--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 		<title>index</title>
 		<link href="https://fonts.googleapis.com/css?family=Barlow:300,400,500" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 		<script type="text/javascript" src="assets/slick/slick.min.js"></script>
         <script src = "assets/js/script.js"></script>
 	</head>
